{
    "name": "TrackEditorInput",
    "maps": [
        {
            "name": "Track",
            "id": "174d0416-bb2d-4214-b091-1b0674924a3b",
            "actions": [
                {
                    "name": "Scale",
                    "type": "Value",
                    "id": "0fae0c19-2e67-4466-8e45-be4eadc34f40",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ToggleLane01Beat",
                    "type": "Button",
                    "id": "facf1fa1-7a40-405f-81bf-972c14f9b87b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleLane02Beat",
                    "type": "Button",
                    "id": "19e53d7a-30d6-479f-873d-caa21b5f8691",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleLane03Beat",
                    "type": "Button",
                    "id": "1aa7211f-2ca4-44d8-8746-f919424fefc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ba957e33-1e77-48a2-b2e0-7246b9ffcdd7",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scale",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d0c25ab-56c3-466c-8076-95e83fb8a0f0",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleLane01Beat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac5dfc1b-5bc1-472a-93bb-2cb19eb39c5c",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleLane01Beat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e468de2e-6dc2-464e-aa31-00d1ac4a2e24",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleLane02Beat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a083fa5c-66c5-4ed3-a0c6-f23e04773663",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleLane02Beat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e560660e-47c1-469d-be0e-24cbf79ffb3e",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleLane03Beat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3917041-aa37-4bb7-9470-bc0be5daf44d",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleLane03Beat",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Tool",
            "id": "85a67ab7-319a-4b10-b3a6-d5d46aad9128",
            "actions": [
                {
                    "name": "MoveTool",
                    "type": "Button",
                    "id": "f5a5b4ae-36a3-411b-b150-7f72592cf800",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectTool",
                    "type": "Button",
                    "id": "1834c147-7381-41da-994c-bec213a34381",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EditTool",
                    "type": "Button",
                    "id": "5befe173-ddda-458d-a4ad-0167a97e7851",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5f0c902a-0762-4a0a-ad27-95b8cf07af87",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c3d26d4-05c3-40c7-b7d3-62850a62c904",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a36cacbf-4457-4e05-913f-4a1386cec846",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EditTool",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "b1e89393-b157-4381-b8fe-99705d77fd8e",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "832a478f-8d19-4838-a874-ee8e25603211",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "23611498-d9d0-4b9b-9c24-adfef633bdad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "664ee588-a648-4d7a-b20d-4a73e678cda4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20ffc1e6-1b6d-44a7-8cd0-fb7bd4daa682",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}